added hero section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             </ul>
         </div>
     </div>
+
+    <div id="hero">
+        <h4>Trade-in-offers</h4>
+        <h2>Super Value Deals</h2>
+        <h1>On all Products</h1>
+        <p>Save more with coupons & upto 70% off!</p>
+        <button>Shop Now</button>
+    </div>
     
     <script src="script.js"></script>
 </body>
