added responsive for sm device

--- a/product.html
+++ b/product.html
@@ -32,21 +32,116 @@
     </div>
 
     <div id="prodetails" class="section-p1">
-        <div class="single-pro-image">
+        <div class="single-pro-image" width="100%">
             <img src="img/products/f1.jpg" width="100%" id="Mainimg" alt="">
             <div class="small-img-group">
                 <div class="small-img-col">
-                    <img src="img/products/f1.jpg" alt="" width="100%" id="small-img">
+                    <img src="img/products/f1.jpg" alt="" width="100%" class="small-img">
                 </div>
                 <div class="small-img-col">
-                    <img src="img/products/f2.jpg" alt="" width="100%" id="small-img">
+                    <img src="img/products/f2.jpg" alt="" width="100%" class="small-img">
                 </div>
                 <div class="small-img-col">
-                    <img src="img/products/f3.jpg" alt="" width="100%" id="small-img">
+                    <img src="img/products/f3.jpg" alt="" width="100%" class="small-img">
                 </div>
                 <div class="small-img-col">
-                    <img src="img/products/f4.jpg" alt="" width="100%" id="small-img">
+                    <img src="img/products/f4.jpg" alt="" width="100%" class="small-img">
                 </div>
+            </div>
+        </div>
+
+        <div class="single-pro-detail">
+            <h6>Home /T-Shirts</h6>
+            <h4>Men's Fashion T shirt</h4>
+            <h2>$139.00</h2>
+            <select name="" id="">
+                <option value="">Select Size</option>
+                <option value="">XL</option>
+                <option value="">XXL</option>
+                <option value="">Small</option>
+                <option value="">Large</option>
+            </select>
+            <input type="number" value="1">
+            <button class="normal">Add To Cart</button>
+            <h4>Product Details</h4>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, iste. Iusto deserunt veniam quia odio,
+                officiis beatae eius sapiente possimus eum consequuntur? Corporis cumque commodi ratione asperiores
+                itaque repellat vel?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio quo vel ratione
+                perspiciatis, accusamus quia quidem expedita ea doloremque minus. Atque, ea numquam illum quod rem iure
+                quo in temporibus.</span>
+        </div>
+    </div>
+
+    <div class="section-p1" id="product1">
+        <h2>Featured Products</h2>
+        <p>Summer Collection New Modern Design</p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="img/products/n1.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/products/n2.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/products/n3.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="img/products/n4.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirt</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
         </div>
     </div>
