--- a/shop.html
+++ b/shop.html
@@ -38,7 +38,7 @@
 
     <div class="section-p1" id="product1">
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='product.html'">
                 <img src="img/products/f1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
