--- a/blog.html
+++ b/blog.html
@@ -16,8 +16,8 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a class="active" href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="shopping-bag"><a href="cart.html"><i class="fa-duotone fa-solid fa-bag-shopping"></i></a></li>
@@ -31,291 +31,96 @@
         </div>
     </div>
 
-    <div id="page-header">
-        <h2>#Stay Home</h2>
-        <p>Save more with coupons & upto 70% off!</p>
+    <div id="page-header" class="blog-header">
+        <h2>#Read More</h2>
+        <p>Read all case studies about our products!</p>
     </div>
 
-    <div class="section-p1" id="product1">
-        <div class="pro-container">
-            <div class="pro" onclick="window.location.href='product.html'">
-                <img src="img/products/f1.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+    <div id="blog">
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b1.jpg" alt="">
             </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi asperiores rem, debitis est minima
+                    reiciendis, iusto, vero porro maiores voluptatem similique cupiditate corrupti sit aut laboriosam in
+                    commodi tenetur eius.
+                </p>
+                <a href="#">CONTINUE READING</a>
 
-            <div class="pro">
-                <img src="img/products/f2.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
+            <h1>13/01</h1>
+        </div>
 
-            <div class="pro">
-                <img src="img/products/f3.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b2.jpg" alt="">
             </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi asperiores rem, debitis est minima
+                    reiciendis, iusto, vero porro maiores voluptatem similique cupiditate corrupti sit aut laboriosam in
+                    commodi tenetur eius.
+                </p>
+                <a href="#">CONTINUE READING</a>
 
-            <div class="pro">
-                <img src="img/products/f4.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
+            <h1>13/01</h1>
+        </div>
 
-            <div class="pro">
-                <img src="img/products/f5.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b3.jpg" alt="">
             </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi asperiores rem, debitis est minima
+                    reiciendis, iusto, vero porro maiores voluptatem similique cupiditate corrupti sit aut laboriosam in
+                    commodi tenetur eius.
+                </p>
+                <a href="#">CONTINUE READING</a>
 
-            <div class="pro">
-                <img src="img/products/f6.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
+            <h1>13/01</h1>
+        </div>
 
-            <div class="pro">
-                <img src="img/products/f7.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b4.jpg" alt="">
             </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi asperiores rem, debitis est minima
+                    reiciendis, iusto, vero porro maiores voluptatem similique cupiditate corrupti sit aut laboriosam in
+                    commodi tenetur eius.
+                </p>
+                <a href="#">CONTINUE READING</a>
 
-            <div class="pro">
-                <img src="img/products/f8.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-       
-            <div class="pro">
-                <img src="img/products/n1.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+            <h1>13/01</h1>
+        </div>
 
-            <div class="pro">
-                <img src="img/products/n2.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        <div class="blog-box">
+            <div class="blog-img">
+                <img src="img/blog/b6.jpg" alt="">
             </div>
+            <div class="blog-details">
+                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi asperiores rem, debitis est minima
+                    reiciendis, iusto, vero porro maiores voluptatem similique cupiditate corrupti sit aut laboriosam in
+                    commodi tenetur eius.
+                </p>
+                <a href="#">CONTINUE READING</a>
 
-            <div class="pro">
-                <img src="img/products/n3.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
             </div>
-
-            <div class="pro">
-                <img src="img/products/n4.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="pro">
-                <img src="img/products/n5.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="pro">
-                <img src="img/products/n6.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="pro">
-                <img src="img/products/n7.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-
-            <div class="pro">
-                <img src="img/products/n8.jpg" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirt</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+            <h1>13/01</h1>
         </div>
     </div>
-
     <div id="pagination" class="section-p1">
-         <a href="#">1</a>
-         <a href="#">2</a>
-         <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
     </div>
 
     <div id="newsletter" class="section-p1 section-m1">
