added location and map info

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a  class="active"  href="contact.html">Contact</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
                 <li id="shopping-bag"><a href="cart.html"><i class="fa-duotone fa-solid fa-bag-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
@@ -34,6 +34,39 @@
     <div id="page-header" class="about-header">
         <h2>#Let's_Talk</h2>
         <p>LEAVE A MESSAGE, We love to hear from you!</p>
+    </div>
+
+    <div id="contact-details" class="section-p1">
+        <div class="details">
+            <span>GET IN TOUCH</span>
+            <h2>Visit one of our agency locations or contact us today</h2>
+            <h3>Head Office</h3>
+            <div>
+                <li>
+                    <i class="fa-regular fa-map"></i>
+                    <p>56 Glass Street Glassgow G1 1UL New York</p>
+                </li>
+                <li>
+                    <i class="fa-regular fa-envelope"></i>
+                    <p>contact@example.com</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-phone"></i>
+                    <p>contact@example.com</p>
+                </li>
+                <li>
+                    <i class="fa-regular fa-clock"></i>
+                    <p>Monday to Saturday : 9:00am to 5:00pm</p>
+                </li>
+            </div>
+        </div>
+
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d799.3525694536876!2d84.42952688259227!3d27.678562831495434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3994fb28bdc01095%3A0xe3a546b17da5024d!2sBharatpur%20Airport!5e1!3m2!1sen!2snp!4v1734188828792!5m2!1sen!2snp"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
 
     <div id="newsletter" class="section-p1 section-m1">
