--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,38 @@
         </div>
     </div>
 
+    <div id="form-details">
+        <form action="">
+            <span>LEAVE A MESSAGE</span>
+            <h2>We love to hear from you</h2>
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Your Email">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="normal">Submit</button>
+        </form>
+
+        <div class="people">
+            <div>
+                <img src="img/people/1.png" alt="">
+                <p><span>John Doe</span> Senior Marketing Manager <br> Phone: +1234567890 <br> Email: contact@gmail.com
+                </p>
+            </div>
+
+            <div>
+                <img src="img/people/2.png" alt="">
+                <p><span>John Doe</span> Senior Marketing Manager <br> Phone: +1234567890 <br> Email: contact@gmail.com
+                </p>
+            </div>
+
+            <div>
+                <img src="img/people/3.png" alt="">
+                <p><span>John Doe</span> Senior Marketing Manager <br> Phone: +1234567890 <br> Email: contact@gmail.com
+                </p>
+            </div>
+        </div>
+    </div>
+
     <div id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
