cart.html completed

--- a/cart.html
+++ b/cart.html
@@ -19,8 +19,9 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a  href="contact.html">Contact</a></li>
-                <li id="shopping-bag"><a class="active" href="cart.html"><i class="fa-duotone fa-solid fa-bag-shopping"></i></a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li id="shopping-bag"><a class="active" href="cart.html"><i
+                            class="fa-duotone fa-solid fa-bag-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
         </div>
@@ -36,17 +37,17 @@
         <p>LEAVE A MESSAGE, We love to hear from you!</p>
     </div>
 
-   <div id="cart" class="section-p1">
-    <table width="100%">
-        <thead>
-            <tr>
-                <td>Remove</td>
-                <td>Image</td>
-                <td>Product</td>
-                <td>price</td>
-                <td>Quantity</td>
-                <td>Subtotal</td>
-            </tr>
+    <div id="cart" class="section-p1">
+        <table width="100%">
+            <thead>
+                <tr>
+                    <td>Remove</td>
+                    <td>Image</td>
+                    <td>Product</td>
+                    <td>price</td>
+                    <td>Quantity</td>
+                    <td>Subtotal</td>
+                </tr>
 
             <tbody>
                 <tr>
@@ -79,19 +80,42 @@
 
                 </tr>
             </tbody>
-        </thead>
-    </table>
-   </div>
+            </thead>
+        </table>
+    </div>
 
-   <div id="cart-add" class="section-p1">
-    <div id="coupon">
-        <h3>Apply Coupon</h3>
-        <div>
-            <input type="text" placeholder="Enter Your Coupon">
-            <button class="normal">Apply</button>
+    <div id="cart-add" class="section-p1">
+        <div id="coupon">
+            <h3>Apply Coupon</h3>
+            <div>
+                <input type="text" placeholder="Enter Your Coupon">
+                <button class="normal">Apply</button>
+            </div>
+        </div>
+
+        <div id="subtotal">
+            <h3>Cart Totals</h3>
+            <table>
+                <tr>
+                    <td>Cart Subtotal</td>
+                    <td>$335</td>
+                </tr>
+
+                <tr>
+                    <td>Shipping</td>
+                    <td>Free</td>
+                </tr>
+
+                <tr>
+                    <td><strong>Total</strong></td>
+                    <td><strong>$335</strong></td>
+                </tr>
+            </table>
+
+            <button class="normal">Proceed to checkout</button>
+
         </div>
     </div>
-   </div>
 
     <footer class="section-p1">
         <div class="footer">
